[metadata]
name = hiresaurora
version = 0.0.1
author = Zachariah Milby
description = A Python-based planetary geometry viewer similar to the Planet Viewers on the NASA PDS Ring-Moon Systems Node.
home_page = https://github.com/zachariahmilby/planet-viewer

[options]
include_package_data = True
python_requires >= 3.10.0
packages = find:
install_requires =
   numpy==1.26.3
   matplotlib==3.8.2
   astropy==6.0.0
   requests==2.31.0
   tqdm==4.66.1
   pytz==2023.4
