[metadata]
name = planetviewer
version = 1.0.0
author = Zachariah Milby
description = A Python-based planetary geometry viewer based on the Planet Viewers on the NASA PDS Ring-Moon Systems Node.
home_page = https://github.com/zachariahmilby/planet-viewer

[options]
include_package_data = True
python_requires >= 3.10.0
packages = find:
install_requires =
   numpy>=1.24.4
   matplotlib>=3.9.0
   astropy>=5.3.2
   pandas>=2.2.0
   bottleneck>=1.3.6
   spiceypy>=6.0.0
   requests>=2.31.0
   tqdm>=4.66.1
   pytz>=2023.4
